@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- Cleaning up more of the Phoromatic UI
+
 Phoronix Test Suite 5.2 Milestone 2
 18 May 2014
 
